tests/tooling/fixtures/native/recovery/negative/negative_global_const_reference_forward_initializer.objc3
// Expected diagnostic code(s): O3S210.
module NegativeGlobalConstReferenceForwardInitializer;

let derived = seed + 1;
let seed = 4;

fn main() -> i32 {
  return derived;
}
